<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
</menu>

