...
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/loadMore_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <include layout="@layout/user_list" />

...
